Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91195

Emitters do not work correctly when in node hierarchy

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.1
    • 6.1
    • Quick: 3D
    • None
    • 97dddd4e142fe7f9c18cc963fd4a342f88f742ff
    • Qt Quick 3D - 2021 - Weeks 7/8, Qt Quick 3D - 2021 Week 9 - 10, Qt Quick 3D - 2021 Week 11/12

    Description

      When emitter is part of node hierarchy there are few problems with it. Run the attached example. There are 2 emitters, one in node hierarchy inside particle system and another as a direct child of the system. Only the second one is visible.

      Problem 1: The emitter is not registered to the parent system if it is not direct child node of the system. This should work automatically if the emitter is child of the system. The system parameter should only be needed if the emitter is outside the system.

      Problem 2: After setting the system, the emitter doesn't follow the node hierarchy, but the particles are emitted from the origin. The particles should be emitted based on the node hierarchy.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tuliniemi Jere Tuliniemi
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: